[tool.poetry]
name = "utca"
version = "0.1.0"
description = "Universal token extractor"
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"
pypdf2 = "^3.0.1"
nltk = "^3.8.1"
google-api-python-client = "^2.116.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
torch = "^2.2.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
