[tool.poetry]
name = "utca"
version = "0.1.2"
description = ""
authors = ["knowledgator.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^2.6.1"
nltk = "^3.8.1"
google-api-python-client = "^2.116.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
torch = "^2.0.0"
transformers = "^4.37.2"
opencv-python = "^4.9.0.80"
sqlalchemy = "^2.0.30"
soundfile = "^0.12.1"
pdfplumber = "^0.11.0"
cython = "^3.0.10"
numpy = "^1.26.4"
pillow = "^10.3.0"
openai = "^1.29.0"
openai-whisper = "^20231117"
requests-html = "^0.10.0"
reportlab = "^4.2.0"
requests = "^2.32.2"
gliner = "^0.2.2"
neo4j = "^5.20.0"
chromadb = "^0.5.0"
qdrant-client = "^1.9.1"
fastembed = "^0.3.0"
lxml = {extras = ["html-clean"], version = "^5.2.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
